--- a/IP-L.ipynb
+++ b/IP-L.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h1 align=\"center\">Image Partition</h1>\n",
     "<h5 align=\"center\">Using Laplacian.</h5>"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -16,11 +16,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 1. import libraries and display image"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
